crates/myso/tests/snapshots/ptb_files_tests__publish_non_existent_package.ptb.snap
---
source: crates/myso/tests/ptb_files_tests.rs
expression: "&String::from_iter(normalized(results.join(\"\\n\").chars()))"
---
 === PREVIEW === 
╭───────────────────────────╮
│ PTB Preview               │
├─────────┬─────────────────┤
│ command │ values          │
├─────────┼─────────────────┤
│ publish │ not_a_valid_pkg │
╰─────────┴─────────────────╯
 === BUILDING PTB ERRORS === 
  × Error when processing PTB
   ╭────
 1 │ --publish not_a_valid_pkg 
   · ────────────┬────────────
   ·             ╰── Package path 'not_a_valid_pkg' does not exist
   ╰────
